[package]
name = "convex_fivetran_source"
description = "Fivetran source connector for Convex (convex.dev)"
version = "0.1.0"
authors = [ "Convex, Inc. <team@convex.dev>" ]
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
clap = { features = [ "derive" ], version = "^4.1.8" }
convex = { version = "=0.3.1" }
derive_more = { version = "0.99" }
futures = { version = "0.3" }
futures-async-stream = { version = "0.2" }
maplit = { version = "1" }
prost = { version = "0.11.5" }
prost-types = { version = "0.11.5" }
reqwest = { features = [ "json" ], version = "0.11" }
schemars = { version = "0.8" }
serde = { features = [ "derive" ], version = "1" }
serde_json = { version = "1" }
thiserror = { version = "1" }
tokio = { version = "1" }
tokio-stream = { version = "^0.1.8" }
tonic = { version = "0.9.0" }
url = { version = "2" }

[build-dependencies]
cfg-if = { version = "1.0" }
tonic-build = { version = "0.9.0" }

[dev-dependencies]
convex = { version = "=0.3.1", features = [ "testing" ] }
proptest = { version = "1" }
proptest-derive = { version = "0.3.0" }
rand = { version = "0.8" }
uuid = { version = "1.4" }
